--- a/index.html
+++ b/index.html
@@ -22,28 +22,65 @@
         <link href="style.css" rel="stylesheet">
     </head>
     <body class="darken-4 blue-grey">
-        <div class="valign-wrapper black" style="height: 100vh">
-            <div class="container fullscreen valign white-text">
-                <div class="row">
-                    <div class="col s12 m6 l6">
-                        <h3>Column title</h3>
-                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                    </div>
-                    <div class="col m6 l6 s12">
-                        <h3>Column title</h3>
-                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+        <div class="parallax-container container" style="margin: 0; width: 100%; height: 100%;">
+            <div class="row" style="height: 100vh; margin: 0;">
+                <div class="s12 fullscreen col l5 m5 valign-wrapper" style="height: 100vh; background-color:rgba(0, 0, 0, 0.5);">
+                    <div class="container fullscreen valign white-text">
+                        <h3>Jack Michaud</h3>
+                        <div style="font-weight: 500;">Analyst, Engineer, Security Novice.</div>
+                        <div style="font-weight: 200;">Happy to have you here! Check out my projects, have a good time.</div>
+                        <div class="row" style="padding-top: 10px;" id="intro-links"></div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col s12 m6 l6">
-                        <h3>Column title</h3>
-                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                    </div>
-                    <div class="col m6 l6 s12">
-                        <h3>Column title</h3>
-                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                <div class="col s12 valign-wrapper m7 l7" style="height: 100vh; padding: 10px; ">
+                    <div class="valign">
+                        <div class="card blue-grey darken-1 hoverable">
+                            <div class="card-content white-text">
+                                <span class="card-title">Harrow Search</span>
+                                <p>
+                                  A social media analytics web site. Used to mitigate insurance fraud information for
+                                  private investigators and insurance companies.</p>
+                            </div>
+                            <div class="card-action">
+                                <a target="_none" href="http://harrowsearch.com">Site</a>
+                            </div>
+                        </div>
+                        <div class="card blue-grey hoverable darken-2">
+                            <div class="card-content white-text">
+                                <span class="card-title">Python Websocket RCE (Remote Code Execution)<br></span>
+                                <p>
+                                  A python websocket server with custom commands and easy extensibility. Allows the host to control multiple client browsers.</p>
+                            </div>
+                            <div class="card-action">
+                                <a target="_none" href="https://github.com/jack-michaud/PythonWebsocketRCE">Repository</a>
+                            </div>
+                        </div>
+                        <div class="card blue-grey hoverable darken-3">
+                            <div class="card-content white-text">
+                                <span class="card-title">Halo (Visualization)</span>
+                                <p>
+                                  A Django PostgreSQL visualization website tool.</p>
+                            </div>
+                            <div class="card-action">
+                                <a target="_none" href="https://github.com/jack-michaud/Halo">Repository</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
+            </div>
+            <div class="parallax" style="background-color: black;">
+                <img id="parallax-img" src="assets/img/20150625_022507.jpg" style="opacity: .7;">
+                <script>
+                  var images = ['assets/img/20150623_082246.jpg',
+                                'assets/img/20150624_052303.jpg',
+                                'assets/img/20150625_022507.jpg',
+                                'assets/img/20150626_055508.jpg',
+                                'assets/img/20160222_131636.jpg',
+                                'assets/img/20160222_134958.jpg',
+                                'assets/img/20160222_142259.jpg'];
+                  var img = document.getElementById('parallax-img');
+
+                </script>
             </div>
         </div>
         <div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
